fixes #235 (truncation of results names)

--- a/client/src/assets/dre.css
+++ b/client/src/assets/dre.css
@@ -62,3 +62,8 @@ table {
 table.table {
 	margin-bottom: 0px;
 }
+
+.merge-item{
+	padding:0px;
+	bacground:transparent;
+}
